--- a/JS Interview Ques by Tech Giddion/index.html
+++ b/JS Interview Ques by Tech Giddion/index.html
@@ -33,6 +33,9 @@
     <script src="interviewQues18.js"></script>
     <script src="interviewQues19.js"></script>
     <script src="interviewQues20.js"></script>
+    <script src="interviewQues21.js"></script>
+    <script src="interviewQues22.js"></script>
+    <script src="interviewQues23.js"></script>
 
 
 </body>
